# docker-server

./: .dockerignore  .ebignore  .gitignore  Dockerfile  Procfile  db.sqlite3  docker-compose.yaml  docker-project.pem  entrypoint.sh  pyproject.toml  requirements.txt  test.py
.ebextensions/: 01_beanstalk.config  02_django.config
config/: api_urls.py  settings.py  urls.py
mylink/: admin.py  apps.py  models.py
mylink/migrations/: 0001_initial.py
nginx/: nginx.conf
pypackages/: admin.py  api_urls.py  api_views.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
pypackages/migrations/: 0001_initial.py  0002_watchdata.py  0002_wheel_author_wheel_description_wheel_file_path_and_more.py  0003_wheel_whl_file.py  0004_remove_wheel_file_path.py  0005_alter_wheel_created_at.py  0006_alter_wheel_created_at.py  0007_alter_wheel_created_at.py  0008_author_alter_wheel_author.py
pypackages/parsers/: metadata.py
templates/: index.html  login.html  upload_wheel.html
users/: admin.py  api_urls.py  api_views.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: createsu.py
users/migrations/: 0001_initial.py  0002_user_country.py
