[tool.poetry]
name = "docker-project"
version = "0.1.0"
description = ""
authors = ["hajeong <happykhj67@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
django = "~4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
