[tool.poetry]
name = "docker-project"
version = "0.1.0"
description = ""
authors = ["hajeong <happykhj67@naver.com>"]
readme = "README.md"
#redis
#pyjwt
#rest pnox

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
django = "~4.2"
psycopg = { version = "3.1.*", extras = ["binary", "pool"] }
django-countries = "^7.6.1"
django-seed = "^0.3.1"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-filter = "^24.3"
django-cleanup = "^9.0.0"
drf-spectacular = "^0.28.0"
django-rest-knox = "^5.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
